# agent-orchestration

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  implementation-plan.md  lifecycle.yml  orchestration.md  pyproject.toml
.claude-plugin/: plugin.json
.claude/skills/adr-draft/: SKILL.md
.claude/skills/constitution-gov/: SKILL.md
.cursor/skills/plan-gate/: SKILL.md
.github/workflows/: ci.yml  publish-daemon.yml
constitution/: .state  constitution.md
constitution/adr/: .manifest.sha256  ADR-0001-fork-conductor-at-a-pinned-sha-rebase-only-deliberately.md  ADR-0002-every-shipped-workflow-template-pins-durability-config.md  ADR-0003-engine-dictated-python-deterministic-harness-stays-script-step-shaped.md  ADR-0004-one-run-drives-exactly-one-git-repository.md  ADR-0005-github-writes-are-best-effort-bot-identity-dry-run-by-default-side-effects.md
container/daemon/: Dockerfile
docs/: README.md  cli-design.md  conductor-fork-patches-pending.md  observability-architecture.excalidraw  observability-design.md  observability-notes.md
docs/plans/: 2026-07-19-observability-core.md  2026-07-20-observability-live-bringup-handoff.md  2026-07-21-cli-core.md
openspec/: ledger.jsonl
openspec/changes/011-orch-validate/: proposal.md  tasks.md
openspec/changes/015-github-mirror/: approval-state.json  design.md  deviation.json  tasks.md
openspec/changes/015-github-mirror/adr-proposals/: github-writes-posture.md
openspec/changes/015-github-mirror/specs/github-mirror/: spec.md
openspec/changes/archive/011-orch-validate/: approval-state.json  deviation.json
openspec/changes/archive/011-orch-validate/specs/cli-validate/: spec.md
openspec/changes/archive/015-github-mirror/: approval-state.json  deviation.json  proposal.md
openspec/specs/cli-validate/: spec.md
openspec/specs/github-mirror/: spec.md
orchestration/: __init__.py  __main__.py  client.py
orchestration/cli/: config.py  daemon_cmd.py  launch_cmd.py  main.py  payloads.py  validate_cmd.py
orchestration/daemon/: __main__.py  app.py  github_mirror.py  ports.py  resume.py  supervise.py
orchestration/harness/: README.md  __init__.py  common.py  deviation_check.py  diff_paths.py  flakiness.py  gates.py  l1_acceptance.py  l2_healthcheck.py
orchestration/launch/: __init__.py  archive_handoff.py  change.py  checkpoint_env.py  milestone_commit.py  milestone_push.py  milestone_tick.py  notify_escalation.py
orchestration/mcp/: README.md  __init__.py  lifecycle_tools.py  server.py  workflow_tools.py
orchestration/obs/: classify.py  registry.py  status.py
orchestration/resume/: README.md  __init__.py  checkpoint.py  events.py  lifecycle_status.py  plan.py  watcher.py
personas/: README.md  implementer.md  orchestrator.md  verifier.md
skills/orchestration-launch/: SKILL.md
skills/orchestration-monitor/: SKILL.md
tests/: conftest.py  launch_testbed.py  m6_testbed.py  stub_provider.py  test_archive_close.py  test_cli_client.py  test_cli_config.py  test_cli_daemon_cmd.py  test_cli_launch_cmd.py  test_cli_main.py  test_cli_payloads.py  test_cli_validate.py  test_consent_invariant.py  test_daemon_app.py  test_daemon_github_mirror.py  test_daemon_ports.py  test_daemon_resume.py  test_daemon_supervise.py  test_harness_cli.py  test_harness_determinism.py  test_harness_deviation_check.py  test_harness_diff_paths.py  test_harness_flakiness.py  test_harness_gates.py  test_harness_l1.py  test_harness_l2.py  test_launch_change.py  test_launch_checkpoint_env.py  test_launch_milestone_commit.py  test_launch_milestone_push.py  test_launch_milestone_tick.py  test_launch_notify_escalation.py  test_launch_probe.py  test_launch_web.py  test_m6_live_verification.py  test_m8_archive_gate.py  test_m8_concurrency.py  test_mcp_lifecycle_tools.py  test_mcp_workflow_tools.py  test_obs_classify.py  (+16 more)
tests/fixtures/: execute_change_2_milestones.json  execute_change_2_milestones.stub.json  m1b_stub_script.json
tests/fixtures/testbed/: README.md  conftest.py
tests/fixtures/testbed/sample_pkg/: __init__.py  calc.py
tests/fixtures/testbed/tests/: test_calc.py  test_flaky.py  test_stable.py
workflows/: README.md  execute-change.yaml  m1b-claudebox-smoke.yaml  milestone.yaml
