[project]
name = "agent-orchestration"
version = "0.1.0"
description = "The execution leg: drives an approved spec-lifecycle plan to merged code through a cast of agents, extending Microsoft Conductor as the durable spine."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "conductor-cli",
]

[tool.uv.sources]
conductor-cli = { git = "https://github.com/kentra-io/conductor.git", rev = "50d2b59bbabbb204c85fdff32d1ef569bb78f9b9" }

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["orchestration"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
