[project]
name = "agent-orchestration"
version = "0.1.0"
description = "The execution leg: drives an approved spec-lifecycle plan to merged code through a cast of agents, extending Microsoft Conductor as the durable spine."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "conductor-cli",
]

[tool.uv.sources]
conductor-cli = { git = "https://github.com/kentra-io/conductor.git", rev = "5461008b7d5adf0beae30f9459e4b088c9d4d7f9" }

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["orchestration"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# tests/fixtures/testbed/ is a *template* (materialized into a throwaway repo
# at test time by tests/testbed.py) - it is not meant to be collected in
# place, and its test_flaky.py is deliberately flaky if run against a
# leftover/unmanaged counter file.
norecursedirs = ["fixtures"]
markers = [
    "live: costs real money and needs a running claudebox box with claude authenticated inside it (see tests/test_workflows_live.py). Not run by default -- self-skips at zero cost unless M1B_LIVE_BOX/M1B_LIVE_WORKTREE are set.",
]
