[project]
name = "agent-orchestration"
version = "0.1.0"
description = "The execution leg: drives an approved spec-lifecycle plan to merged code through a cast of agents, extending Microsoft Conductor as the durable spine."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "conductor-cli",
    # Direct dependency (M7): orchestration/mcp/server.py imports
    # `mcp.server.fastmcp` directly for the Conductor-MCP operator surface.
    # Already present transitively via conductor-cli's own deps -- pinned
    # explicitly here since we import it ourselves, not just inherit it.
    "mcp>=1.28.0",
]

[project.scripts]
orch = "orchestration.cli.main:main"
orchestration = "orchestration.cli.main:main"

[tool.uv.sources]
conductor-cli = { git = "https://github.com/kentra-io/conductor.git", rev = "5a80095a23a18ee6060a5eb2f931cc6cf36a76ea" }

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["orchestration"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# tests/fixtures/testbed/ is a *template* (materialized into a throwaway repo
# at test time by tests/testbed.py) - it is not meant to be collected in
# place, and its test_flaky.py is deliberately flaky if run against a
# leftover/unmanaged counter file.
norecursedirs = ["fixtures"]
markers = [
    "live: costs real money and needs a running claudebox box with claude authenticated inside it (see tests/test_workflows_live.py and tests/test_m6_live_verification.py). Not run by default -- self-skips at zero cost unless the relevant env vars are set (M1B_LIVE_BOX/M1B_LIVE_WORKTREE for M1b, M6_LIVE_BOX/M6_LIVE_WORKTREE for M6).",
    "m6_ladder: the M6 full-ladder live run (conductor run workflows/milestone.yaml against a real box) -- the most expensive single test; carried IN ADDITION to `live` so it can be selected/excluded separately (-m 'live and not m6_ladder').",
]
